tdf#115015: make crypto settings better fit allocated space

Oh dear how much do I dislike fixed size dialogs. Everytime they
are enlarged to fit new content (esp. gtk3 is rather space-greedy
there) someone starts to whine the dialog is now too large

Doing what e6d7d7375221 does is not really an option, since there
are some 30+ tabpages to try and test for optimal size here.

And two more squashed commits:

tdf#1155015: Make sure checkbox text really wraps

for :wrap property to be effective, a reasonable height request is
needed so the text is not forced into single line again

tdf#115994: Extensions' option pages need fixed pref. size

as they are fixed size .xdl-based dialogs mostly
But because of tdf#115015 calculate this preferred size as approx.
14 text edits + some padding to make sure crypto settings will fit
the allocated space

Change-Id: I3ffb2d794f76781eb62186093b928289593585cf